# fluxbound

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: publish.yml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  faq.md  index.md
src/fluxbound/: __init__.py
src/fluxbound/core/: environment.py  model.py  utils.py
src/fluxbound/io/: sbml.py
src/fluxbound/simulation/: deletion.py  fba.py  fva.py
src/fluxbound/solver/: __init__.py  solution.py  solver.py
src/fluxbound/solvers/: __init__.py  cplex_wrapper.py  gurobi_wrapper.py  scip_wrapper.py  solution.py  solver.py
tests/: test_deletion.py  test_fba.py  test_placeholder.py  test_sbml.py  test_solvers.py
tests/data/: e_coli_core_copy.xml
