[project]
name = "fluxbound"
version = "0.1.0"
description = "A minimalistic python package for flux balance analysis"
readme = "README.md"
authors = [
    { name = "Daniel Machado", email = "cdanielmachado@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-libsbml",
    "sympy",
    "pandas",
    "pyscipopt",
]
keywords = ["flux balance analysis", "metabolic modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
license = { text = "MIT" }

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cplex>=22.2.0.0",
    "gurobipy>=13.0.2",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[project.urls]
Homepage = "https://github.com/cdanielmachado/fluxbound"
Repository = "https://github.com/cdanielmachado/fluxbound"

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
